--- a/app/views/landmarks/index.erb
+++ b/app/views/landmarks/index.erb
@@ -1,6 +1,6 @@
 <h1>Landmarks</h1>
 <% Landmark.all.each do |landmark| %>
-<h2>landmark.name</h2> : <h2>landmark.year_completed</h2>
+<h2><%= landmark.name %></h2> : <h2><%= landmark.year_completed %></h2>
 <% end %>
 
 <a class="button" href="landmarks/new">Create A New Landmark</a>
